[gd_scene load_steps=5 format=3 uid="uid://dum1k7fyt5sw8"]

[ext_resource type="Texture2D" uid="uid://c2puhaxilt4ud" path="res://assets/capsule-lasergun-laser.png" id="1_n040w"]
[ext_resource type="Script" path="res://agents/bullet/bullet.gd" id="1_rikvn"]
[ext_resource type="AudioStream" uid="uid://d4et0wxjqxqmf" path="res://sound/laser.wav" id="3_eqawg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p4hym"]
radius = 2.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_rikvn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_n040w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p4hym")

[node name="Timeout" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eqawg")
volume_db = -3.519

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout"]
